--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -12,13 +12,11 @@
             <div class="stat">
                 <p-chart type="pie" [data]="data" [options]="chartOptions"  [style]="{'width': '2%'}"></p-chart>
             </div>
-            <div class="stat2">
-                <p-chart type="pie" [data]="data" [options]="chartOptions"  [style]="{'width': '2%'}"></p-chart>
-            </div>
+           
         </div>
-    
+    </div>
         <div class="tab">
-        <p-table  [paginator]="true" [rows]="9" sortMode="multiple">
+        <p-table  [value]="listStock" [paginator]="true" [rows]="9" sortMode="multiple">
             <ng-template pTemplate="header">
               <tr style="font-family:'Mukta', sans-serif; font-size: large;">
             <th> Categorie</th>
@@ -27,18 +25,19 @@
                 <th>Prix</th>
               </tr>
             </ng-template>
-            <ng-template pTemplate="body" >
-              <tr>
-                <td>Informatique</td>
-                <td>Pc HP</td>
-                <td>2</td>
-                <td>2000</td>
+            <ng-template pTemplate="body" let-stock >
+              <tr style="color:red">
+                <td>{{ stock.categorie }}</td>
+                <td>{{ stock.labelle }}</td>
+                
+                <td >{{ stock.quantite }}</td>
+                <td>{{ stock.prix }}</td>
                 
               </tr>
             </ng-template>
           </p-table>
      </div>
 
-    </div>
+    
 </div>
 
