--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,22 +1,22 @@
-<div class="wrapper">
+<div class="container">
+    <div class="wrapper">
   <div class="logo">
-      <img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-bird-symbols-png-logo-0.png" alt="">
+      <img src="assets/RS.png" alt="">
   </div>
   <div class="text-center mt-4 name">
       Rama Solution
   </div>
-  <form class="p-3 mt-3">
+  <form class="p-3 mt-3" (ngSubmit)="login()">
       <div class="form-field d-flex align-items-center">
-          <span class="far fa-user"></span>
-          <input type="text" name="userName" id="userName" placeholder="Username">
+          <span class="far fa-user" for="email"></span>
+          <input type="text" name="email" ngModel id="email" placeholder="email">
       </div>
       <div class="form-field d-flex align-items-center">
-          <span class="fas fa-key"></span>
-          <input type="password" name="password" id="pwd" placeholder="Password">
+          <span class="fas fa-key" for="pass"></span>
+          <input type="password" name="pass" ngModel id="pass" placeholder="Mot de Passe">
       </div>
-      <button class="btn mt-3">Login</button>
+      <p-button class="btn mt-3" type="submit" style="margin-left:22%">Se Connecter</p-button>
   </form>
-  <div class="text-center fs-6">
-      <a href="#">Forget password?</a> or <a href="#">Sign up</a>
-  </div>
+ 
+</div>
 </div>
