--- a/src/app/components/employe/profil-employe/profil-employe.component.html
+++ b/src/app/components/employe/profil-employe/profil-employe.component.html
@@ -9,7 +9,7 @@
     <div class="ligne1">
 
       <div class="im">
-        <img [src]="retrievedImage" class="card-img-top" style="width: 280px; margin-top: 8%;" alt="...">
+        <img [src]="retrievedImage" class="card-img-top" style="width:max-content; margin-top: 8%;" alt="...">
       </div>
 
       <div class="t">
@@ -28,54 +28,53 @@
 
           <!--start-->
 
-          <form #addForms="ngForm" (ngSubmit)="updateEmploye(addForms)">
+          <form #addForms="ngForm" class="row g-3" (ngSubmit)="updateEmploye(addForms)">
             <input type="hidden" [(ngModel)]="emp.idPersonnel" name="idPersonnel" class="form-control">
-            <div class="form-group row">
-              <label for="nom" class="col-sm-2 col-form-label">nom</label>
-              <div class="col-sm-10">
+            <div class="col-sm-4">
+              <label for="nom" class="form-label">nom</label>
+              
                 <input type="text" [(ngModel)]="emp.nom" name="nom" class="form-control" id="nom" placeholder="nom"
                   required>
-              </div>
+              
             </div>
 
-            <div class="form-group row">
-              <label for="prenom" class="col-sm-2 col-form-label">prenom</label>
-              <div class="col-sm-10">
+
+            <div class="col-sm-4">
+              <label for="prenom" class="form-label">prenom</label>
                 <input type="text" [(ngModel)]="emp.prenom" name="prenom" class="form-control" id="prenom"
                   placeholder="prenom" required>
-              </div>
+              
             </div>
 
-            <div class="form-group row">
-              <label for="cin" class="col-sm-2 col-form-label">cin</label>
-              <div class="col-sm-10">
+            <div class="col-sm-4">
+              <label for="cin" class="form-label">cin</label>
                 <input type="text" [(ngModel)]="emp.cin" name="cin" class="form-control" id="cin" placeholder="cin"
                   required>
-              </div>
+             
             </div>
 
-            <div class="form-group row">
-              <label for="fonction" class="col-sm-2 col-form-label">fonction</label>
-              <div class="col-sm-10">
+            <div class="col-sm-3">
+              <label for="fonction" class="form-label">fonction</label>
+             
                 <input type="text" [(ngModel)]="emp.fonction" name="fonction" class="form-control" id="fonction"
                   placeholder="fonction" required>
-              </div>
+            
             </div>
 
-            <div class="form-group row">
-              <label for="mail" class="col-sm-2 col-form-label">mail</label>
-              <div class="col-sm-10">
+            <div class="col-sm-3">
+              <label for="mail" class="form-label">mail</label>
+       
                 <input type="text" [(ngModel)]="emp.mail" name="mail" class="form-control" id="mail" placeholder="mail"
                   required>
-              </div>
+  
             </div>
 
-            <div class="form-group row">
-              <label for="nb_jour_initiale" class="col-sm-2 col-form-label">jours conges</label>
-              <div class="col-sm-10">
+            <div class="col-sm-6">
+              <label for="nb_jour_initiale" class="form-label">jours conges</label>
+             
                 <input type="text" [(ngModel)]="emp.nb_jour_initiale" name="nb_jour_initiale" class="form-control"
                   id="nb_jour_initiale" placeholder="nb_jour_initiale" required>
-              </div>
+            
             </div>
             <!--
                           <div class="form-group row">
@@ -94,8 +93,8 @@
                             </div>
                           </div>
                         -->
-            <div class="form-group row">
-              <label for="salaire_de_base" class="col-sm-2 col-form-label">salaire</label>
+            <div class="col-sm-6">
+              <label for="salaire_de_base" class="form-label">salaire</label>
               <div class="col-sm-10">
                 <input type="text" [(ngModel)]="emp.salaire_de_base" name="salaire_de_base" class="form-control"
                   id="salaire_de_base" placeholder="salaire_de_base" required>
@@ -103,8 +102,8 @@
             </div>
 
 
-            <div class="form-group row">
-              <label for="tel" class="col-sm-2 col-form-label"> tel</label>
+            <div class="col-sm-6">
+              <label for="tel" class="form-label"> tel</label>
               <div class="col-sm-10">
                 <input type="text" [(ngModel)]="emp.tel" name="tel" class="form-control" id="tel" placeholder="tel"
                   required>
