--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="wrapper">
+    <div class="wrapper" style="margin-bottom: 3%;">
   <div class="logo">
       <img src="assets/RS.png" alt="">
   </div>
